# zim-vendor

./: Makefile
cxxtools/: ChangeLog  Makefile.in  aclocal.m4  autogen.sh  configure  configure.in
cxxtools/demo/: Makefile.in
cxxtools/include/: Makefile.in
cxxtools/src/: Makefile.am  Makefile.in  config.h.in  properties.cpp
cxxtools/src/http/: Makefile.in
cxxtools/src/json/: Makefile.in
cxxtools/src/unit/: Makefile.in
cxxtools/src/xml/: Makefile.am  Makefile.in
cxxtools/src/xmlrpc/: Makefile.am  Makefile.in
cxxtools/test/: Makefile.in
tntdb/: Makefile.in  aclocal.m4  autogen.sh  configure  configure.in
tntdb/demo/: Makefile.am  Makefile.in
tntdb/doc/: Makefile.in
tntdb/include/: Makefile.in
tntdb/src/: Makefile.am  Makefile.in  config.h.in
tntdb/src/mysql/: Makefile.am  Makefile.in
tntdb/src/oracle/: Makefile.am  Makefile.in
tntdb/src/postgresql/: Makefile.am  Makefile.in
tntdb/src/replicate/: Makefile.am  Makefile.in
tntdb/src/sqlite/: Makefile.am  Makefile.in
tntdb/test/: Makefile.am  Makefile.in
xz/: Makefile.in  aclocal.m4  configure  configure.ac
xz/debug/: Makefile.in
xz/lib/: Makefile.in
xz/src/: Makefile.in
xz/src/liblzma/: Makefile.in
xz/src/liblzma/api/: Makefile.in
xz/src/lzmainfo/: Makefile.in
xz/src/scripts/: Makefile.in
xz/src/xz/: Makefile.in
xz/src/xzdec/: Makefile.in
xz/tests/: Makefile.in
zimlib/: Makefile.in  aclocal.m4  configure  configure.in
zimlib/include/: Makefile.in
zimlib/src/: Makefile.am  Makefile.in  config.h.in
zimlib/src/tools/: Makefile.in
zimlib/test/: Makefile.am  Makefile.in
zimwriter/: Makefile.am  Makefile.in  autogen.sh  configure  configure.in
zimwriter/db/: trivialwords-de.dump  trivialwords-de.txt  words-addindex.sh  words-addindex.sql  words-dropindex.sql  zim-sqlite.sql  zimdb-update.sql
zimwriter/include/: Makefile.am  Makefile.in
zimwriter/include/zim/writer/: articleparser.h  dbsource.h  filesource.h  indexersource.h  mstream.h  search.h  zimindexer.h
zimwriter/src/: Makefile.am  Makefile.in  articleparser.cpp  config.h.in  dbsource.cpp  filesource.cpp  indexersource.cpp  mstream.cpp  search.cpp  wikizim.cpp  zimcreator.cpp  zimcreatorsearch.cpp  zimindexer.cpp  zimwriterdb.cpp
zimwriter/test/: Makefile.am  Makefile.in  createzim-t.cpp  createzim.cpp
